<resources>
    <string name="app_name">My File Rename</string>
    <string name="welcome_text">Welcome, for help about app use see Menu>Help. For app just see options list and select one, fun.</string>
    <string name="example_text">Example text</string>

    <!-- Array of strings for options and descriptions -->
    <!-- OPTIONS ARRAY -->
    <string-array name="options_title">
        <item>Replace chars</item>
        <item>Insert chars</item>
        <item>Add auto-numeration</item>
        <item>Extra features</item>
    </string-array>

    <!-- DESCRIPTION ARRAY -->
    <string-array name="options_description">
        <item>Replace specifics chars or string in file name (this action replace all coincidences by a char).</item>
        <item>Insert specifics chars in a specifics position, characters position starts in 0 to n.</item>
        <item>Add auto-numeration to all file names (you must specific the start number and star position).</item>
        <item>Extra features for the app, some features are marked as in develop.</item>
    </string-array>

    <!-- Error messages -->
    <string name="file_utils_no_files_err">No files to show</string>
    <!-- DESCRIPTION STEPS FOR activity_replace -->>
    <string name="ar_step_one_title">1. Add or select some files</string>
    <!-- Text for checkbox and radio buttons -->
    <!-- step 1 -->
    <string name="ar_step_one_radio_path">Path to files</string>
    <string name="ar_step_one_radio_select">Select files</string>
    <string name="ar_step_one_label_edit_path">Specific path to directory</string>
    <string name="ar_step_one_label_cd_edit_path">Directory path</string>
    <string name="ar_step_one_edit_path_hint">Example: /sdcard</string>
    <string name="ar_step_one_button_select_file">Select file</string>
    <string name="ar_step_one_edit_path_auto_fill_hint">/sdcard</string>
    <string name="ar_step_one_button_save_path">Save</string>
    <string name="path_not_exist_err">The path not exist</string>
</resources>
